<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.jmotionsoft.towntalk.JoinActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_width"
            android:inputType="textEmailAddress"
            android:hint="@string/txt_email"/>

        <EditText
            android:id="@+id/edt_nickname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_width"
            android:inputType="text"
            android:hint="@string/txt_nickname"/>

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_width"
            android:inputType="textPassword"
            android:hint="@string/txt_password"/>

        <EditText
            android:id="@+id/edt_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_width"
            android:inputType="textPassword"
            android:hint="@string/txt_password_confirm"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="right">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/txt_location_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_subhead"/>

            <TextView
                android:id="@+id/txt_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_caption"/>
        </LinearLayout>


        <Button
            android:id="@+id/btn_select_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_select_location"
            style="@style/buttonDefault"/>
    </LinearLayout>
</LinearLayout>
